--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var sc_https=1;
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./ARCHITECTURE/GRACE COURT 2/IMG-20220101-WA0014.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh">
+          <img src="./Imgs/GraceCourt1/13.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh">
         </div>
         <div class="carousel-item">
           <img src="./Imgs/img2.JPG" alt="Los Angeles" class="d-block w-100 " height="500vh">
