--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@ var sc_https=1;
     </div>
     <div class="col-md-4 stop">
       <div class="card">
-        <img src="./ARCHITECTURE/GRACE COURT 2/IMG-20220101-WA0018.jpg" alt="">
+        <img src="./Imgs/GraceCourt2/5.jpg" alt="">
         <div class="card-body">
         </div>
       </div>
