--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@ var sc_https=1;
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./Imgs/GraceCourt1/13.jpg" alt="Los Angeles" class="d-block w-100 " height="">
+          <img src="./Imgs/GraceCourt1/13.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh">
         </div>
         <div class="carousel-item">
-          <img src="./Imgs/img2.JPG" alt="Los Angeles" class="d-block w-100 " height="">
+          <img src="./Imgs/img2.JPG" alt="Los Angeles" class="d-block w-100 " height="500vh">
         </div>
         <div class="carousel-item">
-            <img src="./Imgs/img3.JPG" alt="Los Angeles" class="d-block w-100 " height="">
+            <img src="./Imgs/img3.JPG" alt="Los Angeles" class="d-block w-100 " height="500vh">
           </div>
           <div class="carousel-item">
             <img src="./Imgs/img4.JPG" alt="Los Angeles" class="d-block w-100 " height="">
           </div>
           <div class="carousel-item">
-            <img src="./Imgs/img5.JPG" alt="Los Angeles" class="d-block w-100" height="">
+            <img src="./Imgs/img5.JPG" alt="Los Angeles" class="d-block w-100" height="500vh">
           </div>
           <div class="carousel-item">
             <img src="./Imgs/img6.jpg" alt="Los Angeles" class="d-block w-100">
