--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@ var sc_https=1;
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./Imgs/GraceCourt1/13.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh">
+          <img src="./refined images/EYE VIEW 2.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh">
         </div>
         <div class="carousel-item">
-          <img src="./Imgs/img2.JPG" alt="Los Angeles" class="d-block w-100 " height="500vh">
+          <img src="./refined images/IMG-20220101-WA0012.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh">
         </div>
         <div class="carousel-item">
-            <img src="./Imgs/img3.JPG" alt="Los Angeles" class="d-block w-100 " height="500vh">
+            <img src="./refined images/IMG-20220101-WA0016.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh">
           </div>
           <div class="carousel-item">
-            <img src="./Imgs/img4.JPG" alt="Los Angeles" class="d-block w-100 " height="">
+            <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" class="d-block w-100 " height="">
           </div>
           <div class="carousel-item">
-            <img src="./Imgs/img5.JPG" alt="Los Angeles" class="d-block w-100" height="500vh">
+            <img src="./refined images/IMG-20220101-WA0020.jpg" alt="Los Angeles" class="d-block w-100" height="500vh">
           </div>
           <div class="carousel-item">
-            <img src="./Imgs/img6.jpg" alt="Los Angeles" class="d-block w-100">
+            <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="./Imgs/img7.JPG" alt="Los Angeles" class="d-block w-100">
+            <img src="./refined images/IMG_6519 (3).jpg" alt="Los Angeles" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="./Imgs/img8.jpg" alt="Los Angeles" class="d-block w-100">
+            <img src="./refined images/VIEW A.jpg" alt="Los Angeles" class="d-block w-100">
           </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
