--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@ var sc_https=1;
 <div class="container" style="margin-top: 1rem; font-size: 0.9rem; width: 70%;">
   <p><strong>CITY CATALOGUE NIGERIA LIMITED with RC No 1269468, </strong>is an architecture and project management ouit with an energec team with sole aim of providing one-stop technical and administrave soluon to its clientele across the world with Nigeria as the foundation</p>
   <p>We and our team of experts share a strong desire which is to transform the landscape with effecve presence in Nigeria, Africa and internaonally by transmung concepts and ideas into substanal realies.</p>
-  <p>Most importantly we intend to create a world adaptable to urban commercializaon, where our clients live life in style and learn to embrace lifes true pleasures... A world of style, luxury, elegance, and finesse at all timmes</p>
+  <p>Most importantly we intend to create a world adaptable to urban commercializaon, where our clients live life in style and learn to embrace lifes true pleasures... A world of style, luxury, elegance, and finesse at all times</p>
 </div>
 
 <div class="container" style="text-align: center; margin-top: 3rem; font-size: 1.9rem;">
