--- a/architecture.html
+++ b/architecture.html
@@ -26,7 +26,7 @@
 <link rel="stylesheet" href="./css/bootstrap.min.css">
 
 <script>
-var sc_project=; 
+var sc_project=11981757; 
 var sc_invisible=1; 
 var sc_security="35d2687e"; 
 var sc_https=1; 
