--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@ var sc_https=1;
             <img src="./refined images/IMG-20220101-WA0016.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh">
           </div>
           <div class="carousel-item">
-            <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" class="d-block w-100 " height="">
+            <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh">
           </div>
           <div class="carousel-item">
             <img src="./refined images/IMG-20220101-WA0020.jpg" alt="Los Angeles" class="d-block w-100" height="500vh">
           </div>
           <div class="carousel-item">
-            <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" class="d-block w-100">
+            <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" class="d-block w-100" height="500vh">
           </div>
           <div class="carousel-item">
             <img src="./refined images/IMG_6519 (3).jpg" alt="Los Angeles" class="d-block w-100">
