--- a/about.html
+++ b/about.html
@@ -94,18 +94,21 @@ var sc_https=1;
 <div class="body">
     <div class="" style="margin-top:9rem ; font-size: 3.3rem; text-align: center;">About Us </div>
   
-<div class="nt">
-  <img src="./IMG_6517.jpg" alt="">
+<div class="nt" style="">
+  <img src="./IMG_6517.jpg" alt="" >
 </div>
 
   <div class="container" style="text-align: center; margin-top: 1rem; font-size: 1.9rem;">
     What We Do
   </div>
 
-<div class="container" style="margin-top: 1rem; font-size: 0.9rem; width: 70%;">
-  <p><strong>CITY CATALOGUE NIGERIA LIMITED with RC No 1269468, </strong>is an architecture and project management ouit with an energec team with sole aim of providing one-stop technical and administrave soluon to its clientele across the world with Nigeria as the foundation</p>
-  <p>We and our team of experts share a strong desire which is to transform the landscape with effecve presence in Nigeria, Africa and internaonally by transmung concepts and ideas into substanal realies.</p>
-  <p>Most importantly we intend to create a world adaptable to urban commercializaon, where our clients live life in style and learn to embrace lifes true pleasures... A world of style, luxury, elegance, and finesse at all times</p>
+
+
+
+
+<div class="container" style="margin-top: 1rem; font-size: 0.9rem; width: 70%;"> is an architecture and project management outfit with an energetic team with sole aim of providing one-stop technical and administrative solution to its clientele across the world with Nigeria as the foundation.</p>
+  <p>We and our team of experts share a strong desire which is to transform the landscape with effective presence in Nigeria, Africa and internationally by transmuting concepts and ideas into substantial realities. </p>
+  <p>Most importantly we intend to create a world adaptable to urban commercialization, where our clients live life in style and learn to embrace life's true pleasures. A world of style, luxury, elegance, and finesse at all times.</p>
 </div>
 
 <div class="container" style="text-align: center; margin-top: 3rem; font-size: 1.9rem;">
@@ -117,7 +120,7 @@ var sc_https=1;
  
   <div class="container" style="margin-top: 2rem; ">
   <strong>Our Mission </strong>
-  <p>To be true to our name by providing the best architectural services possible by transming concepts and ideas</p></div>
+  <p>To be true to our name by providing the best architectural services possible by transmuting concepts and ideas</p></div>
 
   <div class="container" style="margin-top: 2rem;">
     <strong>Our Vision </strong>
@@ -125,18 +128,17 @@ var sc_https=1;
 
     <div class="container" style="margin-top: 2rem;">
       <strong>Our Philosophy </strong>
-      <p>That we create a world where our clients live life in style and learn to embrace lifes true pleasures. A world of style, luxury, elegance, grace and finesse at all times.</p></div>
+      <p>That we create a world where our clients live life in style and learn to embrace life's true pleasures. A world of style, luxury, elegance, grace and finesse at all times.</p></div>
 
       <div class="container" style="margin-top: 2rem;">
         <strong>Our Style</strong>
-        <p>Creang a world class environment, that transcends regional boundaries, sufficiently flexible and adaptable to urban commercializaon, having sasfied our clients brief.</p></div>
+        <p>Creating a world class environment, that transcends regional boundaries, sufficiently flexible and adaptable to urban commercialization, having satisfied our clients brief.</p></div>
 
 
 </div>
 
 <div class="container" style="text-align: center; margin-top: 1rem; font-size: 1.9rem;">
-  Team Lead
-</div>
+  TEAM LEAD</div>
 
 <div class="mbus" style="row-gap: 0px; margin-left: 2rem; margin-right: 2rem; font-size: 0.9; border-top: 0.1px solid black; margin-top: 2rem; ">
   <div class="container-fluid">
@@ -146,8 +148,8 @@ var sc_https=1;
       </div>
       <div class="col-lg-7 p-5" >
         <strong style="font-size: 1.4rem;">Taiwo Adisa M.arch, MNIA | MD</strong>
-        <p class="text-break" style="margin-top: 1.4rem;">Taiwo atended the Obafemi Awolowo University, where he obtained both a bachelors degree and a masters degree in Architecture</p>
-        <p class="text-break" style="margin-top: 1.2rem;">As a student, Taiwo emerged as one of the best graduang students in his M.Arch class. A cerfied Architect and Project Manager, He has acquired skills, tools, experience and knowledge base that are requisite to funconing at the summit of the industry. Over an impacul eleven years career, spent especially aending to high profile signature projects, Taiwo has connued to learn from work experiences and personal development while striving to leave indelible foot prints on individuals, projects and organisaons he crosses paths with.</p>
+        <p class="text-break" style="margin-top: 1.4rem;">Taiwo attended the Obafemi Awolowo University, where he obtained both a bachelors degree and a masters degree in Architecture.</p>
+        <p class="text-break" style="margin-top: 1.2rem;">As a student, Taiwo emerged as one of the best graduating students in his M.Arch class. A certified Architect and Project Manager, He has acquired skills, tools, experience and knowledge base that are requisite to functioning at the summit of the industry. Over an impactful eleven years career, spent especially attending to high profile signature projects, Taiwo has continued to learn from work experiences and personal development while striving to leave indelible foot prints on individuals, projects and organizations he crosses paths with.</p>
       </div>
     </div>
   </div>
@@ -161,7 +163,7 @@ var sc_https=1;
       </div>
       <div class="col-lg-7 p-5" >
         <strong style="font-size: 1.4rem;">Alh. Najeem Adewale Awodele| CHAIRMAN</strong>
-        <p class="text-break" style="margin-top: 1.4rem;">Alhaji Najeem Alao Adewale Awodele BSc and M.sc in Philosophy from the University of Lagos, Akoka is the Chairman, Board of Directors, Project catalogue Ltd. He hails from Ogun State and he is an accomplished Teacher and Consultant. He is a Member of the Nigerian Instute of Management (NIM).</p>
+        <p class="text-break" style="margin-top: 1.4rem;">Alhaji Najeem Alao Adewale Awodele BSc and M.sc in Philosophy from the University of Lagos, Akoka is the Chairman, Board of Directors, Project catalogue Ltd. He hails from Ogun State and he is an accomplished Teacher and Consultant. He is a Member of the Nigerian Institute of Management (NIM).     </p>
         <p class="text-break" style="margin-top: 1.2rem;">He was a one-time Minister of State for Agriculture and Water Resources appointed by President Goodluck Jonathan.</p>
 
       </div>
