--- a/construction and project.html
+++ b/construction and project.html
@@ -60,7 +60,7 @@ var sc_https=1;
             </a>
             <ul class="navbar-nav">
                 <li>
-                    <a class="nav-link active page-scroll" href="#home_section">Home</a>
+                    <a class="nav-link active page-scroll" href="./index.html">Home</a>
                 </li>
               
                 <li>
