--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ var sc_https=1;
     	<a class="navbar-brand page-scroll" href="#home_section">
         	
         <div class="container">
-                     <img class="" src="./team-logo.png" alt="logo" width="15%" />
+                     <img class="" src="./team-logo.png" alt="logo" width="15%"  />
  
         </div>
             <img class="logo_default" src="" alt="logo" />
@@ -93,25 +93,25 @@ var sc_https=1;
           <img src="./ec8af7c0-f365-4ae1-ad1f-bd11e8adb1c6.jpg" alt="Los Angeles" class="d-block w-100 " height="600vh" width="100%" style=""> 
         </div>
         <div class="carousel-item">
-          <img src="./refined images/IMG-20220101-WA0012.jpg" alt="Los Angeles" class="d-block w-100 " height="" width="100%">
+          <img src="./refined images/IMG-20220101-WA0012.jpg" alt="Los Angeles" class="d-block w-100 " height="600vh" width="100%">
         </div>
         <div class="carousel-item">
-            <img src="./refined images/IMG-20220101-WA0016.jpg" alt="Los Angeles" class="d-block w-100 " height="" width="100%">
+            <img src="./refined images/IMG-20220101-WA0016.jpg" alt="Los Angeles" class="d-block w-100 " height="600vh" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" class="d-block w-100 " height="" width="100%">
+            <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" class="d-block w-100 " height="600vh" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./refined images/IMG-20220101-WA0020.jpg" alt="Los Angeles" class="d-block w-100" height="" width="100%">
+            <img src="./refined images/IMG-20220101-WA0020.jpg" alt="Los Angeles" class="d-block w-100" height="600vh" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" class="d-block w-100" height="" width="100%">
+            <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" class="d-block w-100" height="600vh" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./refined images/IMG_6519 (3).jpg" alt="Los Angeles" class="d-block w-100" width="100%">
+            <img src="./refined images/IMG_6519 (3).jpg" alt="Los Angeles" class="d-block w-100" height="600vh" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./refined images/VIEW A.jpg" alt="Los Angeles" class="d-block w-100" width="100%">
+            <img src="./refined images/VIEW A.jpg" alt="Los Angeles" class="d-block w-100" height="600vh" width="100%">
           </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
