--- a/about.html
+++ b/about.html
@@ -189,7 +189,22 @@ var sc_https=1;
 </div>
 
 
-
+<div class="mbus" style="row-gap: 0px; margin-left: 2rem; margin-right: 2rem; font-size: 0.9; border-top: 0.1px solid black; margin-top: 2rem; ">
+  <div class="container-fluid">
+    <div class="row" style="row-gap: 0px;">
+      <div class="col-lg-5 p-5">
+        <img class="img" src="./logo.png" alt="about" style="width: 50%; margin-left: 2rem; ">
+      </div>
+      <div class="col-lg-7 p-5" >
+        <strong style="font-size: 1.4rem;">Damilola Oyeniyi | PROJECT MANAGER</strong>
+        <p class="text-break" style="margin-top: 1.4rem;">A certified architect who has been with the company since 2014. He has worked on a few of our construction project for the company and also coordinate our interior design project. 
+        </p>
+        <p class="text-break" style="margin-top: 1.2rem;">A graduate of Obafemi Awolowo University with a masters degree in architecture whose core experience has been on project management.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
 
   </div>
 
