--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@ var sc_https=1;
 
 
 
-<div class="container" style="margin-top: 1rem; font-size: 0.9rem; width: 70%;"> is an architecture and project management outfit with an energetic team with sole aim of providing one-stop technical and administrative solution to its clientele across the world with Nigeria as the foundation.</p>
+<div class="container" style="margin-top: 1rem; font-size: 0.9rem; width: 70%;"> Is an architecture and project management outfit with an energetic team with sole aim of providing one-stop technical and administrative solution to its clientele across the world with Nigeria as the foundation.</p>
   <p>We and our team of experts share a strong desire which is to transform the landscape with effective presence in Nigeria, Africa and internationally by transmuting concepts and ideas into substantial realities. </p>
   <p>Most importantly we intend to create a world adaptable to urban commercialization, where our clients live life in style and learn to embrace life's true pleasures. A world of style, luxury, elegance, and finesse at all times.</p>
 </div>
