--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@ var sc_https=1;
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./ec8af7c0-f365-4ae1-ad1f-bd11e8adb1c6.jpg" alt="Los Angeles" class="d-block w-100 " height="700px" width="100%" style=""> 
+          <img src="./refined images/PARCEL_5 - Photo.png" alt="Los Angeles" class="d-block w-100 " height="700px" width="100%" style=""> 
         </div>
         <div class="carousel-item">
-          <img src="./refined images/IMG-20220101-WA0012.jpg" alt="Los Angeles" class="d-block w-100 " height="700px" width="100%" style="">
+          <img src="./ec8af7c0-f365-4ae1-ad1f-bd11e8adb1c6.jpg" alt="Los Angeles" class="d-block w-100 " height="700px" width="100%" style="">
         </div>
         <div class="carousel-item">
-            <img src="./refined images/IMG-20220101-WA0016.jpg" alt="Los Angeles" class="d-block w-100 " height="700px" width="100%">
+            <img src="./refined images/PARCEL_12 - Photo.png" alt="Los Angeles" class="d-block w-100 " height="700px" width="100%">
           </div>
           <div class="carousel-item">
             <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" class="d-block w-100 " height="700px" width="100%">
