--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ var sc_https=1;
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./refined images/PARCEL_5 - Photo.png" alt="Los Angeles" class="d-block w-100 " height="500vh" width="100%" style=""> 
+          <img src="./Sorted Pics/PARCEL_5 - Photo.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh" width="100%" style=""> 
         </div>
         <div class="carousel-item">
           <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh" width="100%" style="">
@@ -100,7 +100,7 @@ var sc_https=1;
             <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./refined images/PARCEL_12 - Photo.png" alt="Los Angeles" class="d-block w-100 " height="500vh" width="100%">
+            <img src="./Sorted Pics/PARCEL_12 - Photo.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh" width="100%">
           </div>
           <div class="carousel-item">
             <img src="./refined images/EYE VIEW 2.jpg" alt="Los Angeles" class="d-block w-100" height="500vh" width="100%">
@@ -109,7 +109,7 @@ var sc_https=1;
             <img src="./NT APARTMENTS/IMG_6519.JPG" alt="Los Angeles" class="d-block w-100" height="500vh" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./WEBSITE/PARCEL_6 - Photo.png" alt="Los Angeles" class="d-block w-100" height="500vh" width="100%">
+            <img src="./Sorted Pics/PARCEL_6 - Photo.jpg" alt="Los Angeles" class="d-block w-100" height="500vh" width="100%">
           </div>
           <div class="carousel-item">
             <img src="./WEBSITE/IMG-20220101-WA0013.jpg" alt="Los Angeles" class="d-block w-100" height="500vh" width="100%">
@@ -123,7 +123,7 @@ var sc_https=1;
       <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
       </button>
     </div>
-    <div class="overlay"></div>
+    <div class="overlay" ></div>
   
   </div>
 
