--- a/index.html
+++ b/index.html
@@ -87,7 +87,55 @@ var sc_https=1;
 
 
 
-<div class="body">
+<div id="carousel" class="carousel slide" data-ride="carousel" style="margin-top: 3rem;">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel" data-slide-to="1"></li>
+    <li data-target="#carousel" data-slide-to="2"></li>
+  </ol>
+
+  <div class="carousel-inner" role="listbox">
+
+    <div class="carousel-item active" style="">
+      <div class="caption">
+        <h1>Create and share your whatever</h1>
+        <h2>Make it easy for you to do whatever this thing does.</h2>
+      </div>
+    </div>
+
+    <div class="carousel-item" style="background-image: url('./WEBSITE/PARCEL_5\ -\ Photo.png'); background-size: cover;">
+      <div class="caption">
+        <h1>Something and share your whatever</h1>
+        <h2>Else it easy for you to do whatever this thing does.</h2>
+
+        <a class="big-button" href="" title="">Create Project</a>
+        <div class="clear"></div>
+        <a class="view-demo" href="" title="">View Demo</a>
+      </div>
+    </div>
+    
+    <div class="carousel-item" style="background-image: url('./WEBSITE/PARCEL_12\ -\ Photo.png'); background-size: cover;">
+      <div class="caption">
+        <h1>Create and share your whatever</h1>
+        <h2>Make it easy for you to do whatever this thing does.</h2>
+      </div>
+    </div>
+
+  </div>
+  
+  <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+
+</div>
+
+
+<!-- <div class="body">
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -125,7 +173,7 @@ var sc_https=1;
     </div>
     <div class="overlay" ></div>
   
-  </div>
+  </div> -->
 
 
 
