--- a/index.html
+++ b/index.html
@@ -93,31 +93,31 @@ var sc_https=1;
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./Sorted Pics/PARCEL_5 - Photo.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh" width="100%" style=""> 
+          <img src="./Sorted Pics/PARCEL_5 - Photo.jpg" alt="Los Angeles" class=" " height="700px" width="100%" style=""> 
         </div>
         <div class="carousel-item">
-          <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh" width="100%" style="">
+          <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" class=" " height="700px" width="100%" style="">
         </div>
         <div class="carousel-item">
-            <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh" width="100%">
+            <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" class=" " height="700px" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./Sorted Pics/PARCEL_12 - Photo.jpg" alt="Los Angeles" class="d-block w-100 " height="500vh" width="100%">
+            <img src="./Sorted Pics/PARCEL_12 - Photo.jpg" alt="Los Angeles" class=" " height="700px" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./refined images/EYE VIEW 2.jpg" alt="Los Angeles" class="d-block w-100" height="500vh" width="100%">
+            <img src="./refined images/EYE VIEW 2.jpg" alt="Los Angeles" class="d-block w-100" height="700px" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./NT APARTMENTS/IMG_6519.JPG" alt="Los Angeles" class="d-block w-100" height="500vh" width="100%">
+            <img src="./NT APARTMENTS/IMG_6519.JPG" alt="Los Angeles" class="d-block w-100" height="700px" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./Sorted Pics/PARCEL_6 - Photo.jpg" alt="Los Angeles" class="d-block w-100" height="500vh" width="100%">
+            <img src="./Sorted Pics/PARCEL_6 - Photo.jpg" alt="Los Angeles" class="d-block w-100" height="700px" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./WEBSITE/IMG-20220101-WA0013.jpg" alt="Los Angeles" class="d-block w-100" height="500vh" width="100%">
+            <img src="./WEBSITE/IMG-20220101-WA0013.jpg" alt="Los Angeles" class="d-block w-100" height="700px" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./NT APARTMENTS/IMG_6520.JPG" alt="Los Angeles" class="d-block w-100" height="500vh" width="100%">
+            <img src="./NT APARTMENTS/IMG_6520.JPG" alt="Los Angeles" class="d-block w-100" height="700px" width="100%">
           </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
