--- a/architecture.html
+++ b/architecture.html
@@ -1848,7 +1848,7 @@ var sc_https=1;
       </div> -->
 
       <div class="container pt-5 pb-5">
-        <h3 style="text-align: center;">MRS NNENNA TERRACE APARTMENT WITH PENTHOUSE </h3>
+        <h3 style="text-align: center;"> CLAY COURT </h3>
 
         <div class="row">
         <div class="col-md-4">
