--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@ var sc_https=1;
   @media screen and (max-width: 400px) {
 .carousel-item img{
 width: 100%;
+height: 50px;
+margin-left: 134px;
+padding-top: 14px;
+display: flex;
+transform: translate()
 }
 
   };
