--- a/Interior And Urban .html
+++ b/Interior And Urban .html
@@ -45,7 +45,7 @@ var sc_https=1;
     	<a class="navbar-brand page-scroll" href="./index.html">
         	
         <div class="container">
-                     <img class="" src="./team-logo.png" alt="logo" width="15%" />
+          <img id="legal" src="./XMAS LOGO/XMAS LOGO CCNL.png" alt="logo" width="17%"  />
  
         </div>
             <img class="logo_default" src="" alt="logo" />
