--- a/construction and project.html
+++ b/construction and project.html
@@ -46,7 +46,7 @@ var sc_https=1;
     	<a class="navbar-brand page-scroll" href="#home_section">
         	
         <div class="container">
-                     <img class="" src="./team-logo.png" alt="logo" width="15%" />
+          <img id="legal" src="./XMAS LOGO/XMAS LOGO CCNL.png" alt="logo" width="17%"  />
  
         </div>
             <img class="logo_default" src="" alt="logo" />
