--- a/architecture.html
+++ b/architecture.html
@@ -345,7 +345,9 @@ var sc_https=1;
   </div>
   <div class="col-md-4 stop">
     <div class="card">
-      <img src="./elms/IMG_2 - Photo.png" alt="">
+      <!-- <img src="./elms/IMG_2 - Photo.png" alt=""> -->
+      <img src="./elms/IMG_4 - Photo.png" alt="">
+ 
       <div class="card-body">
       </div>
     </div>
@@ -362,7 +364,9 @@ var sc_https=1;
 <div class="row pt-5">
   <div class="col-md-4">
     <div class="card">
-      <img src="./elms/IMG_4 - Photo.png" alt="">
+      <!-- <img src="./elms/IMG_4 - Photo.png" alt=""> -->
+            <img src="./elms/IMG_2 - Photo.png" alt="">
+
       <div class="card-body">
         
       </div>
