--- a/architecture.html
+++ b/architecture.html
@@ -93,7 +93,7 @@ var sc_https=1;
 </div>
 
 <div class="container pt-5 pb-5">
-  <h3 style="text-align: center;">AFRICAN LANE</h3>
+  <h3 style="text-align: center;">VINEWOOD APARTMENTS</h3>
 
   <div class="row">
   <div class="col-md-4">
