--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@ var sc_https=1;
             <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" class=" " height="700px" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./Sorted Pics/PARCEL_12 - Photo.jpg" alt="Los Angeles" class=" " height="700px" width="100%">
+            <img src="./IVY COTTAGE/1.jpg" alt="Los Angeles" class=" " height="700px" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./refined images/EYE VIEW 2.jpg" alt="Los Angeles" class="" height="700px" width="100%">
+            <img src="./Imgs/SAM-ORAY-COURT/2.JPG" alt="Los Angeles" class="" height="700px" width="100%">
           </div>
           <div class="carousel-item">
             <img src="./NT APARTMENTS/IMG_6519.JPG" alt="Los Angeles" class="" height="700px" width="100%">
