--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@ var sc_https=1;
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./Sorted Pics/PARCEL_5 - Photo.jpg" alt="Los Angeles" class=" " height="700px" width="100%" style=""> 
+          <img src="./Sorted Pics/PARCEL_5 - Photo.jpg" alt="Los Angeles" loading="lazy" class=" " height="700px" width="100%" style=""> 
         </div>
         <div class="carousel-item">
-          <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" class=" " height="700px" width="100%" style="">
+          <img src="./refined images/IMG-20220101-WA0018.jpg" alt="Los Angeles" loading="lazy" class=" " height="700px" width="100%" style="" >
         </div>
         <div class="carousel-item">
-            <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" class=" " height="700px" width="100%">
+            <img src="./refined images/IMG_6517.jpg" alt="Los Angeles" loading="lazy" class=" " height="700px" width="100%">
           </div>
           <div class="carousel-item">
-            <img src="./IVY COTTAGE/1.jpg" alt="Los Angeles" class=" " height="700px" width="100%">
+            <img src="./IVY COTTAGE/1.jpg" alt="Los Angeles" loading="lazy" class=" " height="700px" width="100%">
           </div>
           <div class="carousel-item">
             <img src="./Imgs/SAM-ORAY-COURT/2.JPG" alt="Los Angeles" class="" height="700px" width="100%">
