--- a/index.html
+++ b/index.html
@@ -119,6 +119,46 @@ var sc_https=1;
           <div class="carousel-item">
             <img src="./NT APARTMENTS/IMG_6520.JPG" alt="Los Angeles" class="" height="700px" width="100%">
           </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/EXTERIOR VIEW_2.jpg" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/IMG_2861.JPG" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/IMG_6 - Photo.jpg" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/IMG_7719.JPG" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./NT APARTMENTS/IMG_6520.JPG" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/LEKKI -4A.jpg" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/OPTION A- 1.jpg" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/PARCEL_5 - Photo.png" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/TERRACE -3.jpg" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/VIEW B-PNG.png" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/VIEW C (1).jpg" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/VIEW E.jpg" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+          <div class="carousel-item">
+            <img src="./1HOMEPAGE/VIEW F.jpg" alt="Los Angeles" class="" height="700px" width="100%">
+          </div>
+         
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
       </button>
