--- a/architecture.html
+++ b/architecture.html
@@ -4030,7 +4030,7 @@ var sc_https=1;
 
   <p style="text-align: center;">Copyright© 2022</p>
 
-
+jjjjj
 
 
 <a href="#" class="scrollup" style="display: none;"><i class="ion-ios-arrow-up"></i></a> 
