--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@ var sc_https=1;
           <div class="carousel-item">
             <img src="./1HOMEPAGE/TERRACE -3.jpg" alt="Los Angeles" class="" height="700px" width="100%">
           </div>
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
             <img src="./1HOMEPAGE/VIEW B-PNG.png" alt="Los Angeles" class="" height="700px" width="100%">
-          </div>
+          </div> -->
           <div class="carousel-item">
             <img src="./1HOMEPAGE/VIEW C (1).jpg" alt="Los Angeles" class="" height="700px" width="100%">
           </div>
