--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@ var sc_https=1;
     <div class="" style="margin-top:9rem ; font-size: 3.3rem; text-align: center;">About Us </div>
   
 <div class="nt" style="">
-  <img src="./IMG_6517.jpg" alt="" >
+  <img src="./IMG_6517 (1).jpg" alt="" >
 </div>
 
   <div class="container" style="text-align: center; margin-top: 1rem; font-size: 1.9rem;">
